# compiling-anything-to-categories

./: Example.hs  Example2.hs  README.org  Syntax.hs  cabal.project  compiling-anything-to-categories.cabal
