cabal-version:  2.4

name:           compiling-anything-to-categories
version:        0.1
description:    Example project for Categorifier GHC plugin
homepage:       https://github.com/sellout/compiling-anything-to-categories#readme
bug-reports:    https://github.com/sellout/compiling-anything-to-categories/issues
build-type:     Simple
tested-with:    GHC==8.10.1, GHC==8.10.2, GHC==8.10.4

source-repository head
  type: git
  location: https://github.com/sellout/compiling-anything-to-categories

executable trivial-example
  main-is: Example.hs
  ghc-options:
    -fplugin Categorifier
  build-depends:
    , base
    , categorifier-plugin
    -- needed for generated code
    , categorifier-category
    , categorifier-client
    , ghc-prim

executable example2
  main-is: Example2.hs
  ghc-options:
    -fplugin Categorifier
  build-depends:
    , base
    , categorifier-plugin
    -- needed for generated code
    , categorifier-category
    , categorifier-client
    , ghc-prim

executable syntax-example
  main-is: Syntax.hs
  ghc-options:
    -fplugin Categorifier
    -fplugin-opt Categorifier:hierarchy:Categorifier.Hierarchy.ConCat.classHierarchy
  build-depends:
    , base
    , categorifier-concat-examples
    , categorifier-concat-integration
    , categorifier-plugin
    , lens
    -- needed for generated code
    , categorifier-category
    , categorifier-client
    , concat-classes
    , ghc-prim
